noinst_LTLIBRARIES = libOPMIRISCode_noinst.la

#libOPMIRISCode_noinst_la_HEADERS = \
#	IrisOpmTdefs.h \
#	PMTwoPhaseElliptic.h \
#	PMTwoPhaseSaturation.h \
#	PMTwoPhaseSimulationData.h \
#	PMTwoPhaseSimulator.h \
#	SFCapPress.h \
#	SFCentralUpwind.h \
#	SFMpfaFps.h \
#	SFPMPhysicalFieldProperties.h \
#	SFRelPerm.h \
#	VTKHeaderWriter.h \
#	VTKStructuredGridWriter.h

libOPMIRISCode_noinst_la_SOURCES = \
	PMTwoPhaseSimulationData.cpp \
	SFCapPress.cpp \
	SFCentralUpwind.cpp \
	SFMpfaFps.cpp \
	SFPMPhysicalFieldProperties.cpp \
	SFRelPerm.cpp \
	VTKHeaderWriter.cpp \
	VTKStructuredGridWriter.cpp

include $(top_srcdir)/am/global-rules
